// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutes video 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
      }
    }
  >
    <Video
      controls={false}
-     muted={false}
+     muted={true}
      onEnd={[Function handleClose]}
      onProgress={[Function handleProgress]}
      paused={false}
      resizeMode=\\"cover\\"
      source={
@@ -175,11 +175,11 @@
              }
            }
            testID=\\"MutedButton\\"
          >
            <SvgMock
-             testID=\\"UnmutedIcon\\"
+             testID=\\"MutedIcon\\"
            />
          </View>
        </View>
      </View>
    </View>"
`;

exports[`pauses video 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -8,11 +8,11 @@
    <Video
      controls={false}
      muted={false}
      onEnd={[Function handleClose]}
      onProgress={[Function handleProgress]}
-     paused={false}
+     paused={true}
      resizeMode=\\"cover\\"
      source={
        Object {
          \\"uri\\": \\"file:/video.mov\\",
        }
@@ -154,11 +154,11 @@
              }
            }
            testID=\\"PausePlayButton\\"
          >
            <SvgMock
-             testID=\\"PauseIcon\\"
+             testID=\\"PlayIconEmpty\\"
            />
          </View>
          <View
            accessible={true}
            focusable={true}"
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Video
    controls={false}
    muted={false}
    onEnd={[Function]}
    onProgress={[Function]}
    paused={false}
    resizeMode="cover"
    source={
      Object {
        "uri": "file:/video.mov",
      }
    }
    style={
      Object {
        "height": 1334,
        "position": "absolute",
        "width": 750,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      forwardedRef={[Function]}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "flex-end",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 20,
          "width": 750,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#00000066",
            "borderRadius": 18,
            "margin": 18,
            "opacity": 1,
          }
        }
        testID="CloseButton"
      >
        <SvgMock
          color="#ffffff"
          height={36}
          width={36}
        />
      </View>
    </View>
    <View
      forwardedRef={[Function]}
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Object {
          "backgroundColor": "#00000066",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 32,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": 40,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#ffffff",
                  "fontSize": 24,
                  "fontWeight": "300",
                  "lineHeight": 30,
                  "textAlign": "center",
                },
              ]
            }
          >
            :0
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#ffffff",
              "borderRadius": 24,
              "borderWidth": 1,
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "width": 48,
            }
          }
          testID="PausePlayButton"
        >
          <SvgMock
            testID="PauseIcon"
          />
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="MutedButton"
        >
          <SvgMock
            testID="UnmutedIcon"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`sets video progress time 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -126,11 +126,11 @@
                    \\"textAlign\\": \\"center\\",
                  },
                ]
              }
            >
-             :0
+             :7
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}"
`;
